--- a/en/index.html
+++ b/en/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Dogecoin is an open source peer-to-peer digital currency, favored by Shiba Inus worldwide." />
     <meta name="author" content="" />
-    <title>데드캣 코인 | 시작 가이드</title>
+    <title>DeadCat Coin | Start Guide</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <link rel="stylesheet" href="assets/fa/css/all.min.css"/>
@@ -62,9 +62,9 @@
                 <div class="col-md-12">
                     <img class="masthead-avatar mb-1" style="margin-top:3rem;" src="assets/img/doge.png" alt="" />
                     <!-- Masthead Subheading-->
-                    <p class="masthead-subheading font-weight-light text-secondary mb-0">데드캣 코인은 자유로운 P2P 화폐입니다</p>
+                    <p class="masthead-subheading font-weight-light text-secondary mb-0">Deadcat is liberty P2P Coin</p>
                     <div class="btn-holder mt-4">
-                        <a class="btn btn-secondary btn-lg js-scroll-trigger" href="#start"><span data-i18n="dgc-get-started-now">지금 시작하기</span></a>&nbsp;
+                        <a class="btn btn-secondary btn-lg js-scroll-trigger" href="#start"><span data-i18n="dgc-get-started-now">Start Now</span></a>&nbsp;
                         <!-- <a class="btn btn-outline-secondary btn-lg" href="https://github.com/dogecoin/dogecoin" target="_blank"><span class="fab fa-github"></span> 코드보기</a> -->
                     </div>
                 </div>
@@ -75,7 +75,7 @@
     <section class="page-section portfolio" id="wallets">
         <div class="container">
             <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">지갑을 설치하세요</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">install wallet</h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
@@ -94,7 +94,7 @@
                 <div class="col-md-6 col-lg-6 mb-5">
                     <div class="mx-auto">
                         <div class="img-holder">
-                            <p class="lead">메타마크스</p>
+                            <p class="lead">metamask</p>
                             <img style="max-width: 150px;" src="assets/img/multidoge2.png">
                         </div>
                         <br>
@@ -108,7 +108,7 @@
                 <div class="col-md-6 col-lg-6 mb-5">
                     <div class="mx-auto">
                         <div class="img-holder">
-                            <p class="lead">바이낸스 체인 / Trust 월렛</p>
+                            <p class="lead">bnc chain / Trust </p>
                             <img style="max-width: 300px;" src="assets/img/binance_trust1.png">
                         </div>
                         <br>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col-md-12 col-lg-12 mb-5">
                     <div class="mx-auto">
-                        <p class="lead">팬케이크 스왑</p>
+                        <p class="lead">pancakeswap</p>
                         <div class="img-holder">
                             <img style="max-width: 150px;" src="assets/img/eth.png">
                         </div>
@@ -148,7 +148,7 @@
     <!-- About Section -->
     <section class="page-section bg-primary text-secondary mb-0" id="about">
         <div class="container">
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">데드캣 코인이 뭔가요?</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">what is deadcat?</h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
@@ -178,19 +178,19 @@
                     &nbsp;
                     <a class="btn btn-outline-secondary" target="_blank" href="https://gall.dcinside.com/board/lists?id=programming">
                         <!-- <i class="fab fa-dochub mr-2"></i> -->
-                        프로그래밍
+                        programming
                     </a>
                 </div>
             </div>
             <div class="col-md-6 mt-4">
                 <!-- About Section Heading-->
-                <h3 class="text-center text-uppercase text-secondary">데드캣코인의 고양이는 누군가요?</h2>
+                <h3 class="text-center text-uppercase text-secondary">who is cat of deadcat</h2>
                     <!-- About Section Content-->
                     <div class="ml-auto text-center"><p class="lead"><br>고양이는 귀여운 팝캣입니다 애옹 쓰다듬어주세요</p></div>
                     <!-- About Section Button--><br>
                     <div class="text-center mt-3">
                         <a class="btn btn-secondary" href="https://namu.wiki/w/Pop%20Cat" target="_blank"><i class="fab fa-wikipedia-w mr-2"></i>
-                            팝캣에 대해 알아보기
+                            learn to popcat
                         </a>
                         &nbsp;
                         <!-- <a class="btn btn-outline-secondary" href="https://namu.wiki/w/%EA%B3%A0%EC%96%91%EC%9D%B4" target="_blank">
