--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                      <p>
                          메타마스크는 토큰추가 맞춤형토큰, 바이낸스 체인은 +를 두번 누르고<br>
                          <a class="btn btn-sm btn-outline-secondary" target="_blank" onclick="copy()">0xCE22Ba2E7b9BEea82870bD0d4c42f0c7C4448DFc  <span class="far fa-copy"></span></a>를 계약주소에 넣어주세요<br>
-                         PC 메타마스크는 <a class="btn btn-sm btn-outline-secondary" target="_blank" href="https://bit.ly/3dQJ6Bd">추가</a>버튼으로 간편하게 등록할수 있습니다.
+                         PC 메타마스크는 <a class="btn btn-sm btn-outline-secondary" target="_blank" href="https://vittominacori.github.io/watch-token/page/?hash=0x7b2261646472657373223a22307843453232426132453762394245656138323837306244306434633432663063374334343438444663222c226c6f676f223a2268747470733a2f2f64656164636174636f696e2e6769746875622e696f2f6c6f676f2e706e67227d&network=bsc_mainnet">추가</a>버튼으로 간편하게 등록할수 있습니다.
                     </p>
                      <p class="lead">4. 데드캣코인을 에어드랍 받으세요</p>
                      <p>
